<resources>
    <string name="app_name">Recipe App</string>
    <string name="todo">TODO</string>
    <string name="wellcome_to_my_recipe">Welcome to My Recipe App</string>
    <string name="home">Home</string>
    <string name="my_good_food">My Good Food</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="good_food">Good Food</string>
    <string name="recipename">recipeName</string>
    <string name="recipe_discription">recipe discription</string>
    <string name="id">Id</string>
    <string name="likes">Likes</string>
    <string name="uased">Uased</string>
    <string name="missed">Missed</string>
    <string name="title">Title</string>
    <string name="random">random</string>
    <string name="starter">starter</string>
    <string name="mains">mains</string>
    <string name="dessert">dessert</string>
    <string name="search_by_filter">Search by Filter</string>
    <string name="loading">Loading…</string>
</resources>